<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E33012"
    tools:context=".weightlossveg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        1.
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/card1"
            app:cardElevation="25dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            tools:ignore="OnClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/alata"
                    android:text="Status:-"
                    android:textAlignment="textStart"
                    android:paddingLeft="5dp"
                    android:textColor="#E33012"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/alata"
                    android:paddingLeft="5dp"
                    android:text="Over Weight"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="25sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        2.
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/card2"
            android:layout_below="@id/card1"
            android:layout_marginLeft="10dp"
            app:cardElevation="25dp"
            app:cardCornerRadius="10dp"
            tools:ignore="OnClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/alata"
                    android:paddingLeft="5dp"
                    android:text="Your BMI Is:-"
                    android:textAlignment="textStart"
                    android:textColor="#E33012"
                    android:textSize="25sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cat1"
            android:layout_width="500dp"
            android:layout_height="40dp"
            android:layout_below="@id/card2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="25dp"
            tools:ignore="OnClick">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E33012">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/alata"
                    android:paddingLeft="5dp"
                    android:text="Upon Waking Up"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cat2"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/cat1"
            android:layout_marginLeft="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="25dp"
            tools:ignore="OnClick">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/alata"
                android:paddingLeft="5dp"
                android:text="@string/early"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="25sp" />


        </androidx.cardview.widget.CardView>
        Breakfast Food:
        <androidx.cardview.widget.CardView
            android:layout_width="500dp"
            android:layout_height="40dp"
            android:id="@+id/card3"
            android:layout_marginTop="10dp"
            android:layout_below="@id/cat2"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            app:cardElevation="20dp"
            tools:ignore="OnClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E33012">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/alata"
                    android:paddingLeft="5dp"
                    android:text="Breakfast (8:00-8:30AM)"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:id="@+id/fd1"
            android:layout_below="@id/card3"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            app:cardElevation="20dp"
            tools:ignore="OnClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/alata"
                    android:paddingLeft="5dp"
                    android:text="@string/br2"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        mid:-
        <androidx.cardview.widget.CardView
            android:layout_width="500dp"
            android:layout_height="40dp"
            android:id="@+id/card4"
            android:layout_marginTop="10dp"
            android:layout_below="@id/fd1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            app:cardElevation="20dp"
            tools:ignore="OnClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E33012">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/alata"
                    android:paddingLeft="5dp"
                    android:text="Mid-Meal (11:00-11:30AM)"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        Mid Meal Food:
        <androidx.cardview.widget.CardView
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:id="@+id/fd2"
            android:layout_below="@id/card4"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            app:cardElevation="20dp"
            tools:ignore="OnClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/alata"
                    android:text="@string/md2"
                    android:textAlignment="textStart"
                    android:paddingLeft="5dp"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        lunch:-
        5.
        <androidx.cardview.widget.CardView
            android:layout_width="500dp"
            android:layout_height="40dp"
            android:id="@+id/card5"
            android:layout_marginTop="10dp"
            android:layout_below="@id/fd2"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            app:cardElevation="20dp"
            tools:ignore="OnClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E33012">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/alata"
                    android:paddingLeft="5dp"
                    android:text="Lunch (2:00-2:30PM)"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        Lunch:
        <androidx.cardview.widget.CardView
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:id="@+id/fd3"
            android:layout_below="@id/card5"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            app:cardElevation="20dp"
            tools:ignore="OnClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/alata"
                    android:paddingLeft="5dp"
                    android:text="@string/lh2"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        6.
        <androidx.cardview.widget.CardView
            android:layout_width="500dp"
            android:layout_height="40dp"
            android:id="@+id/card6"
            android:layout_marginTop="10dp"
            android:layout_below="@id/fd3"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            app:cardElevation="20dp"
            tools:ignore="OnClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E33012">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/alata"
                    android:paddingLeft="5dp"
                    android:text="Evening (4:00-4:30PM)"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        Evening:
        <androidx.cardview.widget.CardView
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:id="@+id/fd4"
            android:layout_below="@id/card6"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            app:cardElevation="20dp"
            tools:ignore="OnClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/alata"
                    android:text="@string/ev2"
                    android:textAlignment="textStart"
                    android:paddingLeft="5dp"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        dinner:-
        <androidx.cardview.widget.CardView
            android:layout_width="500dp"
            android:layout_height="40dp"
            android:id="@+id/card7"
            android:layout_marginTop="10dp"
            android:layout_below="@id/fd4"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            app:cardElevation="20dp"
            tools:ignore="OnClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E33012">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/alata"
                    android:paddingLeft="5dp"
                    android:text="Dinner (8:00-8:30PM)"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        Dinner:
        <androidx.cardview.widget.CardView
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:id="@+id/fd5"
            android:layout_below="@id/card7"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            app:cardElevation="20dp"
            tools:ignore="OnClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/alata"
                    android:text="@string/dn2"
                    android:textAlignment="textStart"
                    android:paddingLeft="5dp"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</ScrollView>


